# zellimobile-server

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md
docker/: Dockerfile  README.md  compose.yaml  config.kdl  entrypoint.sh  layout.kdl  run.sh  spike_w20a.kdl  spike_w20d.kdl
fonts/: README.md  gen_manifest.sh  manifest.json
fonts/licenses/: UbuntuMono-LICENSE.txt
muxrctl/: Cargo.toml
muxrctl/src/: main.rs
muxrctl/src/app/: action.rs  message.rs  state.rs  update.rs
muxrctl/src/pairing/: mod.rs  net.rs  payload.rs
muxrctl/src/server/: ctl_state.rs  mod.rs  tokens.rs
muxrctl/src/tui/: mod.rs  runner.rs
muxrctl/src/tui/screens/: dashboard.rs  qr_overlay.rs  server.rs
muxrctl/src/tui/theme/: palette.rs  styles.rs
muxrctl/src/tui/widgets/: mod.rs  qr.rs
muxrd/: Cargo.toml  build.rs
muxrd/assets/: muxr-default.kdl
muxrd/clients/dart_test_client/: README.md  gen.sh  pubspec.yaml
muxrd/clients/dart_test_client/proto/: muxr.proto
muxrd/examples/: action_client.rs  attach_client.rs  grpc_client.rs  read_client.rs  session_client.rs
muxrd/proto/: muxr.proto
muxrd/src/: auth.rs  cli.rs  client_count.rs  config.rs  control.rs  ipc.rs  lib.rs  tls.rs
muxrd/src/grpc/: helpers.rs  layout.rs  mod.rs  pane_ops.rs  session_ops.rs  space_ops.rs  tab_ops.rs  token_ops.rs
muxrd/src/multiplexer/: detect.rs  mod.rs  routing.rs  types.rs  zellij.rs
muxrd/src/multiplexer/herdr/: api.rs  backend.rs  control.rs  mod.rs  paths.rs  registry.rs  relay.rs  wire.rs
muxrd/src/relay/: helpers.rs  inbound.rs  mod.rs  reader.rs  types.rs
muxrd/tests/: herdr_integration.rs  unit.rs
zellimctl/: Cargo.toml
zellimctl/src/: main.rs
zellimctl/src/app/: action.rs  message.rs  mod.rs  state.rs  update.rs
zellimctl/src/pairing/: mod.rs  net.rs  payload.rs
zellimctl/src/server/: ctl_state.rs  mod.rs  tokens.rs
zellimctl/src/tui/: runner.rs  terminal.rs
zellimctl/src/tui/screens/: cert.rs  config.rs  dashboard.rs  mod.rs  pairing.rs  qr_overlay.rs  server.rs  tokens.rs
zellimctl/src/tui/theme/: mod.rs  palette.rs  styles.rs
zellimctl/src/tui/widgets/: mod.rs  qr.rs
zellimserver/: .gitignore  Cargo.toml  build.rs
zellimserver/assets/: zellimobile-default.kdl
zellimserver/clients/dart_test_client/: README.md  gen.sh  pubspec.yaml
zellimserver/clients/dart_test_client/proto/: zellimserver.proto
zellimserver/examples/: action_client.rs  attach_client.rs  grpc_client.rs  make_token.rs  read_client.rs  session_client.rs  spike.rs  spike_relay_query.rs  spike_w20a.rs  spike_w20b.rs  spike_w20c.rs  spike_w20d.rs  spike_w20e.rs  spike_w20f.rs
zellimserver/src/: actions.rs  auth.rs  cli.rs  client_count.rs  config.rs  control.rs  ipc.rs  lib.rs  query.rs  tls.rs
zellimserver/src/grpc/: helpers.rs  layout.rs  mod.rs  pane_ops.rs  session_ops.rs  tab_ops.rs  token_ops.rs
zellimserver/src/relay/: helpers.rs  inbound.rs  mod.rs  types.rs
zellimserver/tests/: unit.rs
